simplify rsvp process

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>{{ page.title }} | {{ site.title }}</title>
+		<title>Not Found | Unite Our Houses</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -42,13 +42,8 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1 style="font-family:party_businessregular;">no admittance - except on party business</h1>
-							<p class="major">Please see <a href="/">our story</a> for event details.</p>
-							<p class="major">Ready to RSVP or update your invitation?</p>
-							
-							<ul class="actions stacked">
-								<li><a href="https://amberben.anrsvp.com/" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">RSVP Online</a></li>
-							</ul>
+							<h1 style="font-family:party_businessregular;">No, thank you. We don’t want any more visitors, well-wishers, or distant relations.</h1>
+							<p class="major">Please see <a href="/">our story</a> for details.</p>
 						</div>
 						<div class="image">
 							<img src="images/rsvp.png" alt="" />
