--- a/404.html
+++ b/404.html
@@ -42,8 +42,8 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1 style="font-family:party_businessregular;">No, thank you. We don’t want any more visitors, well-wishers, or distant relations.</h1>
-							<p class="major">Please see <a href="/">our story</a> for details.</p>
+							<h1 style="font-family:middleearthmedium;">No, thank you. We don’t want any more visitors, well-wishers, or distant relations.</h1>
+							<p class="major">That page was not found. Please see <a href="/">our story</a> for event schedule and details.</p>
 						</div>
 						<div class="image">
 							<img src="images/rsvp.png" alt="" />
